--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,14 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+
+
+# Local env files - do NOT commit secrets. Keep a `.env.example` in repo instead.
+.env
+.env.*
+
+.env.development
+
 
 npm-debug.log*
 yarn-debug.log*
